k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: myapp-namespace
spec:
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
